# rust-htmx-chatgpt

./: .gitignore  Cargo.toml
assets/: main.js  style.css
src/: main.rs
templates/: 404.html  chat.html  chat_button.html  chat_list.html  index.html  message.html
