[package]
name = "rossgpt"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum", "markdown"] }
askama_axum = "0.3.0"
axum = { version = "0.6", features = ["headers", "macros"] }
axum-extra = "0.7.5"
axum-macros = "0.3.8"
bytes = "1.4.0"
futures = "0.3"
futures-util = "0.3.28"
headers = "0.3.8"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
reqwest = { version = "0.11.18", features = ["stream", "json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["tokio-util", "full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
